[gd_scene load_steps=6 format=2]

[ext_resource path="res://Things/Taart/Taart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Things/Hand/Hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://Utils/ScreenShake.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/Game/Game.gd" type="Script" id=4]
[ext_resource path="res://Screens/Game/Camera2D.gd" type="Script" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
anchor_mode = 0
current = true
script = ExtResource( 5 )

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 3 )]

[node name="Taart" parent="." instance=ExtResource( 1 )]
position = Vector2( 971, 522 )

[node name="EnemyHands" type="Node2D" parent="."]

[node name="Hand" parent="." instance=ExtResource( 2 )]
pause_mode = 2
position = Vector2( 731, 396 )

[node name="NewEnemyTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="StolenTaartTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.3
one_shot = true

[node name="EndTimer" type="Timer" parent="."]

[connection signal="slap" from="Hand" to="." method="_on_Hand_slap"]
[connection signal="timeout" from="NewEnemyTimer" to="." method="_on_NewEnemyTimer_timeout"]
